<resources>
    <string name="app_name">Bundle</string>

    <string name="jon_summary">Jon is basically a giant asshole who should never be trusted.
    You've been warned.</string>
    <string name="jay_summary">It is rumored that Jay predates the discovery of electricity.</string>
    <string name="scott_summary">Scott has the ability to kill a yak from 50 yards away, with real bullets.</string>

    <string name="title_activity_detail">Detail Activity</string>

    // News Card Strings
    <string name="news_article_summary">This is filler text for a given article summary, generated by our SMMRY API call. This will be several (2-4) sentences long, and will allow users to get a glimpse at the article\'s contents prior to reading the full article.</string>
    <string name="news_article_headline">Article Headline</string>
    <string name="news_article_source">Article source</string>

    // Twitter Card Strings
    <string name="twitter_username">Username</string>
    <string name="twitter_handle">"@handle"</string>
    <string name="tweet_content">Contents of a tweet, not to exceed 140 characters. The previous sentence was 50 characters long. By the end of this sentence, I\'ll hit 140..</string>
    <string name="twitter_time_stamp">hh:mm</string>

    // Nav Drawer Strings
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    // Weather Strings
    <string name="city_name">City</string>
    <string name="weather_conditions">Conditions</string>
    <string name="temperature">Temp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value"/>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

</resources>
