<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/weather_light">

    <RelativeLayout
        android:id="@+id/weather_card_light"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/card_background_light">

        <TextView
            android:id="@+id/city_name_light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city_name"
            android:textStyle="bold"
            android:textColor="#757575"
            android:textSize="20dp"
            android:layout_centerVertical="true"/>

        <TextView
            android:id="@+id/temperature_light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temperature"
            android:textSize="18dp"
            android:textColor="#757575"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/>

        <TextView
            android:id="@+id/weather_conditions_light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weather_conditions"
            android:textColor="#757575"
            android:layout_toLeftOf="@id/temperature_light"
            android:layout_centerVertical="true"
            android:layout_marginRight="6dp"/>



    </RelativeLayout>

</FrameLayout>