<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/card_background_light"
    android:layout_marginRight="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp"
    app:cardCornerRadius="5dp"
    android:id="@+id/twitter_light"
    >

        <RelativeLayout
            android:id="@+id/twitter_card_light_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp">

            <ImageView
                android:id="@+id/twitter_profile_picture"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_margin="8dp"
                android:background="@drawable/tw__composer_logo_blue"/>

            <TextView
                android:id="@+id/twitter_username"
                android:layout_gravity="left|center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:text="@string/twitter_username"
                android:textSize="18sp"
                android:textColor="#000000"
                android:layout_toLeftOf="@+id/twitter_time_stamp"
                android:layout_toRightOf="@id/twitter_profile_picture"/>

            <TextView
                android:id="@+id/twitter_handle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/twitter_profile_picture"
                android:layout_below="@id/twitter_username"
                android:text="@string/twitter_handle"
                android:textColor="@color/colorPrimary"
                android:textSize="14dp"
                android:layout_margin="2dp"/>

            <TextView
                android:id="@id/twitter_time_stamp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/twitter_time_stamp"
                android:layout_alignParentRight="true"
                android:layout_margin="4dp" />
            <TextView
                android:id="@+id/twitter_tweet_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/tweet_content"
                android:textSize="14dp"
                android:layout_below="@id/twitter_handle"/>

        </RelativeLayout>

</android.support.v7.widget.CardView>
