<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:backgroundTint="@color/cardview_dark_background"
    android:layout_marginRight="8dp"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp"
    app:cardCornerRadius="5dp"
    android:id="@+id/news_dark">

    <RelativeLayout
        android:id="@+id/weather_card_dark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">

        <TextView
            android:id="@+id/city_name_dark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city_name"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:layout_centerVertical="true"/>

        <TextView
            android:id="@+id/temperature_dark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temperature"
            android:textSize="18sp"
            android:textColor="#ffffff"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/>

        <TextView
            android:id="@+id/weather_conditions_dark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weather_conditions"
            android:textColor="#ffffff"
            android:layout_toLeftOf="@id/temperature_dark"
            android:layout_centerVertical="true"
            android:layout_marginRight="6dp"/>

    </RelativeLayout>

</android.support.v7.widget.CardView>