<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/news_dark">

    <RelativeLayout
        android:id="@+id/news_card_dark_bg"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/card_background_dark">

        <TextView
            android:id="@+id/news_article_source_dark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/news_article_source"
            android:textColor="#ffffff"
            android:textSize="10dp"
            android:layout_margin="2dp"/>

        <TextView
            android:id="@+id/news_article_headline_dark"
            android:layout_alignParentLeft="true"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:text="@string/news_article_headline"
            android:textSize="25dp"
            android:textColor="#ffffff"
            android:layout_below="@id/news_article_source_dark"/>

        <ImageView
            android:id="@+id/news_article_image"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:background="@mipmap/ic_launcher"
            android:layout_alignParentRight="true"
            android:layout_margin="2dp"/>

        <TextView
            android:id="@+id/news_article_summary_dark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:text="@string/news_article_summary"
            android:textColor="#757575"
            android:textSize="14dp"
            android:layout_alignParentBottom="true"/>

    </RelativeLayout>

</android.support.v7.widget.CardView>