<?xml version="1.0" encoding="utf-8"?>


<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginRight="8dp"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp"
    app:cardCornerRadius="5dp"
    android:background="@drawable/card_background_light">
<RelativeLayout
        android:id="@+id/news_card_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp">


        <TextView
            android:id="@+id/news_article_source"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/news_article_source"
            android:textSize="10sp"
            android:layout_toRightOf="@+id/news_article_image"
            android:layout_marginTop="8dp"/>

        <TextView
            android:id="@+id/news_article_headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/news_article_headline"
            android:textSize="16sp"
            android:textColor="#000000"
            android:layout_below="@id/news_article_image"/>

        <ImageView
            android:id="@id/news_article_image"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/google_news_icon"
            android:layout_marginTop="4dp"
            android:layout_marginLeft="4dp"/>

        <TextView
            android:id="@+id/news_article_summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/news_article_summary"
            android:textSize="12dp"
            android:layout_below="@id/news_article_headline"/>

    </RelativeLayout>
</android.support.v7.widget.CardView>
