<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:backgroundTint="@color/cardview_dark_background"
    android:layout_marginRight="8dp"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp"
    app:cardCornerRadius="5dp"
    android:id="@+id/twitter_card_light_bg">

    <RelativeLayout
        android:id="@+id/twitter_card_relative_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp">
        <ImageView
            android:id="@+id/twitter_profile_picture"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_margin="8dp"
            android:background="@drawable/tw__composer_logo_blue"/>

        <TextView
            android:id="@+id/twitter_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#eee"
            android:text="@string/twitter_username"
            android:textSize="18sp"
            android:layout_toLeftOf="@+id/twitter_time_stamp"
            android:layout_toRightOf="@id/twitter_profile_picture"/>

        <TextView
            android:id="@+id/twitter_handle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/twitter_profile_picture"
            android:layout_below="@id/twitter_username"
            android:text="@string/twitter_handle"
            android:textColor="@color/colorAccent"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/twitter_time_stamp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#eee"
            android:text="@string/twitter_time_stamp"
            android:layout_alignTop="@id/twitter_username"
            android:layout_alignParentRight="true"
            android:layout_margin="4dp" />
        <TextView
            android:id="@+id/twitter_tweet_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textColor="#eee"
            android:text="@string/tweet_content"
            android:textSize="14dp"
            android:layout_below="@id/twitter_handle"/>
        <ImageView
            android:id="@+id/tweet_reply_button"
            android:layout_below="@id/twitter_tweet_content"
            android:background="@drawable/ic_reply_white_24dp"
            android:backgroundTint="@color/colorAccent"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="4dp"
            android:layout_alignParentRight="true"
            android:layout_width="24dp"
            android:layout_height="24dp"/>
        <ImageView
            android:id="@+id/tweet_retweet_button"
            android:layout_toLeftOf="@+id/tweet_reply_button"
            android:background="@drawable/twitter_retweet_white"
            android:backgroundTint="@color/colorAccent"
            android:layout_below="@id/twitter_tweet_content"
            android:layout_width="24dp"
            android:layout_height="24dp"/>

    </RelativeLayout>

</android.support.v7.widget.CardView>